--- a/home.html
+++ b/home.html
@@ -3,7 +3,8 @@
 <head>
 <title>home | phoebe wongphatarakul</title>
 <link rel="stylesheet" href="home.css">
-    <link rel="shortcut icon" href="hangyul.jpeg" type="image/x-icon" />
+<!-- <link rel="shortcut icon" href="hangyul.jpeg" type="image/x-icon" /> -->
+    <link rel="shortcut icon" href="processPic.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Libre+Franklin&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Lexend+Exa&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
