--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>sign-in | phoebe wongphatarakul</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="shortcut icon" href="processPic.png" type="image/x-icon" />
     <link href="https://fonts.googleapis.com/css?family=Montserrat:700|Poppins:700&display=swap" rel="stylesheet">
   </head>
   <body>
