--- a/home.html
+++ b/home.html
@@ -386,11 +386,11 @@
               <p class = "noteSubTextMenu">11/15/19</p>
             </button>
           <hr class = "noteLine" align = "left" color = "black">
-          <button class = "buttonNoteSix">
+          <!-- <button class = "buttonNoteSix">
             <p class = "titleNoteMenu"> K-POP Craze </p>
             <p class = "noteSubTextMenu">12/1/19</p>
           </button>
-          <hr class = "noteLine" align = "left" color = "black">
+          <hr class = "noteLine" align = "left" color = "black"> -->
           </div>
           <div class = "textNotes">
             <p class = "titleNote"> October 7, 2019 at 4:30PM </p>
