--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
       <div class = "hide">
       <input type="password" name="pass" placeholder="Enter Password" class = "pass">
       <a href = "home.html"><input type="image" src="https://image.flaticon.com/icons/png/512/54/54661.png" name="button" class="back"/></a>
+      <img class = "arrow" src = "arrowIndex.png">
     </div>
   </div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
