--- a/home.html
+++ b/home.html
@@ -22,8 +22,10 @@
       <p><a href = "contact.html"> Contact </a></p>
       <p><a href = "settings.html"> Settings </a></p> -->
       <!-- <p class = "spaceRight"> bphoebew@gmail.com </p> -->
+      <div class = "lilmenu">
       <a href = "https://www.instagram.com/its.phoebee/" target = "_blank"><img class = "IG" src = "IGICON.png"></a>
-      <img class = "mailIcon" src = "mailTop.png">
+      <a href = "https://github.com/bphoebew" target = "_blank"><img class = "mailIcon" src = "github.png"></a>
+</div>
       <div id="clock"></div>
   </div>
 
