--- a/home.html
+++ b/home.html
@@ -214,11 +214,10 @@
             <p class = "proText">Why I Did This?</p>
             <p class = "proTextSub"> Throughout my whole academic background, I've always been given packets or flashcards to memorize content. This time of learning only lasts for short-time memory and become boring for students.</p>
             <p class = "proTextTwo"> Contributions: </p>
-            <p class = "proTextSubTwo">- I created a modern and aesthetic website in which teachers and students can go on and navigate easily.</p>
-            <p class = "proTextThreeH"> our plan: </p>
-            <p class = "proTextSubThree">- We've been able to reach out to great women like NASA engineers or Karlie Kloss <br><br> - We were able to branch out to local libraries and give talks</p>
-            <a href = "https://bphoebew.github.io/edu/" target = "_blank"><button type="button" class = "techButShe">WEBSITE</button></a>
-            <a href = "https://bphoebew.github.io/edu/" target = "_blank"><button type="button" class = "techButSheTwo">PROCESS</button></a>
+            <p class = "proTextSubTwo">- I created a modern and aesthetic website in which teachers and students can go on and navigate easily.<br><br>- On the right, there is a video of one of the AR games we have been making about differentiating lower case b's and d's</p>
+            <a href = "https://bphoebew.github.io/edu/" target = "_blank"><button type="button" class = "jumButOne">WEBSITE</button></a>
+            <a href = "https://docs.google.com/presentation/d/1LfipKsYxJrg3R5rnIuPc_e9F7s2EKLlBNhSqaKFeoko/edit#slide=id.g7beac8db26_0_134" target = "_blank"><button type="button" class = "jumButTwo">PROCESS</button></a>
+            <a href = "IMG_6908.mov" target = "_blank"><button type="button" class = "jumButThree">VIDEO</button></a>
           </div>
 
           <div class = "shetemPage">
@@ -245,9 +244,9 @@
             <p class = "proTextSub"> Ever since i was young, I was either guessed as a Japanese, Korean, or Chinese Asian girl. I'm none of those, I'm Thai. I want people to know that there are more Asian countries out there besides the "big three". To do this, AZN Magazine will inform those unaware or uneducated of other ethnicities and their backgrounds. On other issues, we will focus around cultural appropriations.</p>
             <p class = "proTextTwo"> Contributions: </p>
             <p class = "proTextSubTwo">- I founded the magazine with my four friends<br><br>- I designed and coded the website<br><br>- I researched around the themes of issues we focused around</p>
-            <p class = "proTextThree"> issue topics <br> coming soon! </p>
-            <a href = "https://docs.google.com/presentation/d/1d6XNJaFMRCJjCavSyduK_V-BFSxPFdiTDacDujpughQ/edit?usp=sharing" target = "_blank"><button type="button" class = "techButAZN">process</button></a>
-            <a href = "http://aznzine.com/" target = "_blank"><button type="button" class = "techButTwo">website</button></a>
+            <p class = "proTextThree"> first issue <br> out now! </p>
+            <a href = "https://docs.google.com/presentation/d/1d6XNJaFMRCJjCavSyduK_V-BFSxPFdiTDacDujpughQ/edit?usp=sharing" target = "_blank"><button type="button" class = "techButAZN">PROCESS</button></a>
+            <a href = "http://aznzine.com/" target = "_blank"><button type="button" class = "techButTwo">WEBSITE</button></a>
           </div>
 
           <div class = "techMagPage">
@@ -259,8 +258,8 @@
             <p class = "proTextSub"> I am an avid lover of technology. I am constantly trying to keep myself updated on the latest content. Usually, I keep up with new updates to phones, laptops, and cars. I tried to change the topic of technology that I looked at to medical devices. Because of this, it opened my eyes to the saying that new tech doesn't always give benefits.</p>
             <p class = "proTextTwo"> Contributions: </p>
             <p class = "proTextSubTwo">I became a co-founder of this project and role was mainly focused around coding and designing the website as well as formatting and laying out the design of the pages of the magazine</p>
-            <a href = "http://whatsupwithtech.online/" target = "_blank"><button type="button" class = "techBut">process</button></a>
-            <a href = "http://whatsupwithtech.online/" target = "_blank"><button type="button" class = "techButTwo">website</button></a>
+            <a href = "http://whatsupwithtech.online/" target = "_blank"><button type="button" class = "techBut">PROCESS</button></a>
+            <a href = "http://whatsupwithtech.online/" target = "_blank"><button type="button" class = "techButTwo">WEBSITE</button></a>
 
           </div>
 
