--- a/home.html
+++ b/home.html
@@ -105,14 +105,16 @@
 <div class = "sevPage">
   <img class = "picsPage" src = "IMG_1491.jpg" id = "marathon">
   <img class = "picsPage" src = "IMG_5003.JPG" id = "track">
-  <img class = "picsPage" src = "white.png" id = "yea">
+  <img class = "picsPage" src = "skzCon.jpg" id = "yea">
   <h1 id = "maraTextTitle"> 1.20.19</h1>
   <h1 id = "maraText">Pasadena Half Marathon</h1>
   <h1 id = "maraPara">Here's a picture of me with my friend, Jackie, finishing the Pasadena Half Marathon at 2 hours!</h1>
   <h1 id = "trackTextTitle"> 8.2.19 </h1>
   <h1 id = "trackText">Kode With <br>Klossy</h1>
   <h1 id = "trackPara"> KWK is a two week immersive camp that taught me web development & inspired me to create S(HE)TEM</p>
-  <h1 id = "yeaText"> More Pictures Coming Soon!</h1>
+  <h1 id = "yeaTextTitle"> 2.16.20</h1>
+  <h1 id = "yeaText">Stray Kids Concert in LA</h1>
+  <h1 id = "yeaPara">UWU ok I'm every other girl that listens to KPOP too. Stream Mixtape #3 & TMT ;) Their songs have great meaning!</h1>
 </div>
 <!-- <div class = "fivePage">
   <img class = "picsPage" src = "memeish.jpg">
@@ -169,7 +171,7 @@
             <p class = "proTextThreeP"> Wishful Outcomes: </p>
             <p class = "proTextSubThree">- That we can spread awareness showing online predators are real and ppl need to be aware <br><br>- Can add more characters and monetize the game </p>
             <a href = "http://pseudoproject.site/" target = "_blank"><button type="button" class = "pseudoBut">GAME</button></a>
-            <a href = "http://phoebecreates.co/pseudo.html" target = "_blank"><button type="button" class = "pseudoButTwo">PROCESS</button></a>
+            <a href = "https://docs.google.com/presentation/d/1A5AwHTxKDnOswMHOeJK0Ra8c1GIEyZ8aV--oZil5vE8/edit?usp=sharing" target = "_blank"><button type="button" class = "pseudoButTwo">PROCESS</button></a>
           </div>
 
           <div class = "justCodePage">
