--- a/home.html
+++ b/home.html
@@ -114,7 +114,7 @@
   <h1 id = "trackPara"> KWK is a two week immersive camp that taught me web development & inspired me to create S(HE)TEM</p>
   <h1 id = "yeaTextTitle"> 2.16.20</h1>
   <h1 id = "yeaText">Stray Kids Concert in LA</h1>
-  <h1 id = "yeaPara">UWU ok I'm every other girl that listens to KPOP too. Stream Mixtape #3 & TMT ;) Their songs have great meaning!</h1>
+  <h1 id = "yeaPara">UWU ok I'm every other girl that listens to KPOP too. Stream Mixtape #3 & Insomnia ;) Their songs have great meaning!</h1>
 </div>
 <!-- <div class = "fivePage">
   <img class = "picsPage" src = "memeish.jpg">
