--- a/home.html
+++ b/home.html
@@ -219,7 +219,7 @@
             <p class = "proTextSubTwo">- I created a modern and aesthetic website in which teachers and students can go on and navigate easily.<br><br>- On the right, there is a video of one of the AR games we have been making about differentiating lower case b's and d's</p>
             <a href = "https://bphoebew.github.io/edu/" target = "_blank"><button type="button" class = "jumButOne">WEBSITE</button></a>
             <a href = "https://docs.google.com/presentation/d/1LfipKsYxJrg3R5rnIuPc_e9F7s2EKLlBNhSqaKFeoko/edit#slide=id.g7beac8db26_0_134" target = "_blank"><button type="button" class = "jumButTwo">PROCESS</button></a>
-            <a href = "IMG_6908.mov" target = "_blank"><button type="button" class = "jumButThree">VIDEO</button></a>
+            <a href = "https://bphoebew.github.io/edu/video.html" target = "_blank"><button type="button" class = "jumButThree">VIDEO</button></a>
           </div>
 
           <div class = "shetemPage">
@@ -389,6 +389,11 @@
               <p class = "noteSubTextMenu">11/15/19</p>
             </button>
           <hr class = "noteLine" align = "left" color = "black">
+          <!-- <button class = "buttonNoteSix">
+            <p class = "titleNoteMenu"> Problematic Ideas in Rom Coms </p>
+            <p class = "noteSubTextMenu">2/14/20</p>
+          </button>
+        <hr class = "noteLine" align = "left" color = "black"> -->
           <!-- <button class = "buttonNoteSix">
             <p class = "titleNoteMenu"> K-POP Craze </p>
             <p class = "noteSubTextMenu">12/1/19</p>
