--- a/home.html
+++ b/home.html
@@ -170,7 +170,7 @@
             <p class = "proTextSubTwo"> As I helped start the project, I was also involved in creating the game. I created everyone's profile, the tutorial, updated the blogs, and put in the scripts for the chat </p>
             <p class = "proTextThreeP"> Wishful Outcomes: </p>
             <p class = "proTextSubThree">- That we can spread awareness showing online predators are real and ppl need to be aware <br><br>- Can add more characters and monetize the game </p>
-            <a href = "http://pseudoproject.site/" target = "_blank"><button type="button" class = "pseudoBut">GAME</button></a>
+            <a href = "https://bphoebew.github.io/pseudo/" target = "_blank"><button type="button" class = "pseudoBut">GAME</button></a>
             <a href = "https://docs.google.com/presentation/d/1A5AwHTxKDnOswMHOeJK0Ra8c1GIEyZ8aV--oZil5vE8/edit?usp=sharing" target = "_blank"><button type="button" class = "pseudoButTwo">PROCESS</button></a>
           </div>
 
@@ -198,12 +198,12 @@
             <p class = "exampleText">Some Projects that I did on Phoebe's Creations:</p>
             <div class = "exampleAll">
               <div class = "lucyAll">
-                <a href = "http://phoebecreates.co/lucy.html" target = "_blank"><img class = "lucy" src = "lucyLogo.png"></a>
+                <a href = "https://bphoebew.github.io/lucy.html" target = "_blank"><img class = "lucy" src = "lucyLogo.png"></a>
                 <p class = "exLucy">Lucy's <br>Psychiatry</p>
-            </div>
-            <a href = "http://phoebecreates.co/index.html" target = "_blank"><button type="button" class = "redesignBut">WEBSITE</button></a>
+          </div>
+            <a href = "https://bphoebew.github.io/" target = "_blank"><button type="button" class = "redesignBut">WEBSITE</button></a>
               <div class = "sdgAll">
-                <a href = "http://phoebecreates.co/sdgs.html" target = "_blank"><img class = "SDG" src = "SDG.jpeg"></a>
+                <a href = "https://bphoebew.github.io/sdgs.html" target = "_blank"><img class = "SDG" src = "SDG.jpeg"></a>
                 <p class = "exSDG">SDGs to SCV</p>
               </div>
           </div>
@@ -233,8 +233,8 @@
             <p class = "proTextSubTwo">- I wireframed the website to make it fun and interactive for anyone that is browsing through the website <br><br> - I researched projects and interviewed prominent women in STEM</p>
             <p class = "proTextThreeH"> Highlights: </p>
             <p class = "proTextSubThree">- We've been able to reach out to great women like NASA engineers or Karlie Kloss <br><br> - We were able to branch out to local libraries and give talks</p>
-            <a href = "http://shetem.world/" target = "_blank"><button type="button" class = "techButShe">WEBSITE</button></a>
-            <a href = "http://shetem.world/" target = "_blank"><button type="button" class = "techButSheTwo">PROCESS</button></a>
+            <a href = "https://bphoebew.github.io/STEM/" target = "_blank"><button type="button" class = "techButShe">WEBSITE</button></a>
+            <a href = "https://bphoebew.github.io/STEM/" target = "_blank"><button type="button" class = "techButSheTwo">PROCESS</button></a>
           </div>
 
           <div class = "aznPage">
@@ -248,7 +248,7 @@
             <p class = "proTextSubTwo">- I founded the magazine with my four friends<br><br>- I designed and coded the website<br><br>- I researched around the themes of issues we focused around</p>
             <p class = "proTextThree"> first issue <br> out now! </p>
             <a href = "https://docs.google.com/presentation/d/1d6XNJaFMRCJjCavSyduK_V-BFSxPFdiTDacDujpughQ/edit?usp=sharing" target = "_blank"><button type="button" class = "techButAZN">PROCESS</button></a>
-            <a href = "http://aznzine.com/" target = "_blank"><button type="button" class = "techButTwo">WEBSITE</button></a>
+            <a href = "https://bphoebew.github.io/azn/" target = "_blank"><button type="button" class = "techButTwo">WEBSITE</button></a>
           </div>
 
           <div class = "techMagPage">
@@ -260,8 +260,8 @@
             <p class = "proTextSub"> I am an avid lover of technology. I am constantly trying to keep myself updated on the latest content. Usually, I keep up with new updates to phones, laptops, and cars. I tried to change the topic of technology that I looked at to medical devices. Because of this, it opened my eyes to the saying that new tech doesn't always give benefits.</p>
             <p class = "proTextTwo"> Contributions: </p>
             <p class = "proTextSubTwo">I became a co-founder of this project and role was mainly focused around coding and designing the website as well as formatting and laying out the design of the pages of the magazine</p>
-            <a href = "http://whatsupwithtech.online/" target = "_blank"><button type="button" class = "techBut">PROCESS</button></a>
-            <a href = "http://whatsupwithtech.online/" target = "_blank"><button type="button" class = "techButTwo">WEBSITE</button></a>
+            <a href = "https://bphoebew.github.io/techMag/" target = "_blank"><button type="button" class = "techBut">PROCESS</button></a>
+            <a href = "https://bphoebew.github.io/techMag/" target = "_blank"><button type="button" class = "techButTwo">WEBSITE</button></a>
 
           </div>
 
